# rust-web-service-architecture

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: lib.rs  main.rs
src/api/: controller_1.rs  controller_2.rs  mod.rs
src/services/: mod.rs  service_1.rs  service_2.rs
